--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,3 +16,29 @@
   }
 }
 
+.swiper-button-next,
+.swiper-button-prev {
+  /* color: white; */
+  /* background: rgba(0, 0, 0, 0.3); */
+  padding: 0.5rem;
+  border-radius: 50%;
+  width: 2.5rem;
+  height: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  font-size: 1.2rem;
+}
+
+
